syntax = "proto3";

package message;

// order args
message OrderRequest {
  string  orderId = 1;
  int64  timeStamp = 2;
}

// order info
message OrderInfo {
  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus = 3;
}

// order service define
service OrderService {
  rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
  // server stream mode
  rpc GetOrderInfos(OrderRequest) returns (stream OrderInfo) {};
}
